[gd_scene load_steps=9 format=3 uid="uid://dgm16veadk1vy"]

[ext_resource type="Script" uid="uid://b5cnwfwqhyi0f" path="res://scenes/test_scene.gd" id="1_a43es"]
[ext_resource type="Theme" uid="uid://bdlvgyq3apvwb" path="res://resources/game_theme.tres" id="1_aonw2"]
[ext_resource type="PackedScene" uid="uid://b2vgvwso01wcj" path="res://resources/ui/chalkboard_background.tscn" id="2_n75kx"]
[ext_resource type="PackedScene" uid="uid://curw8v7qrspij" path="res://resources/components/timer_bar.tscn" id="4_8p806"]
[ext_resource type="PackedScene" uid="uid://m01dmrn2c0fo" path="res://resources/ui/question_screens/clock_to_digital_choice_question.tscn" id="4_jtr7r"]
[ext_resource type="PackedScene" uid="uid://q6ypupt2b4s7" path="res://resources/ui/question_screens/digital_to_clock_choice_question.tscn" id="5_hk5yu"]
[ext_resource type="PackedScene" uid="uid://bmifc4rj4ddqn" path="res://resources/ui/question_screens/clock_to_digital_question.tscn" id="6_06peb"]
[ext_resource type="PackedScene" uid="uid://bj41w4m3hr2qc" path="res://resources/ui/question_screens/digital_to_clock_question.tscn" id="7_si6jt"]

[node name="TestScene" type="Control" node_paths=PackedStringArray("number_label", "question_timer", "clock_to_digital_choice_question", "digital_to_clock_choice_question", "clock_to_digital_question", "digital_to_clock_question")]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
script = ExtResource("1_a43es")
number_label = NodePath("HBoxContainer/NumberLabel")
question_timer = NodePath("HBoxContainer/TimerBar")
clock_to_digital_choice_question = NodePath("ClockToDigitalChoiceQuestion")
digital_to_clock_choice_question = NodePath("DigitalToClockChoiceQuestion")
clock_to_digital_question = NodePath("ClockToDigitalQuestion")
digital_to_clock_question = NodePath("DigitalToClockQuestion")

[node name="Background" parent="." instance=ExtResource("2_n75kx")]
layout_mode = 1
metadata/_edit_lock_ = true

[node name="ClockToDigitalChoiceQuestion" parent="." instance=ExtResource("4_jtr7r")]
visible = false
layout_mode = 1
offset_bottom = -2.0

[node name="DigitalToClockChoiceQuestion" parent="." instance=ExtResource("5_hk5yu")]
visible = false
layout_mode = 1

[node name="ClockToDigitalQuestion" parent="." instance=ExtResource("6_06peb")]
visible = false

[node name="DigitalToClockQuestion" parent="." instance=ExtResource("7_si6jt")]
offset_left = 44.0
offset_top = 60.0
offset_right = 1093.0
offset_bottom = 563.0

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 0
offset_left = 36.0
offset_top = 579.0
offset_right = 1117.0
offset_bottom = 623.0

[node name="TimerBar" parent="HBoxContainer" instance=ExtResource("4_8p806")]
layout_mode = 2
size_flags_horizontal = 3

[node name="NumberLabel" type="Label" parent="HBoxContainer"]
custom_minimum_size = Vector2(115, 0)
layout_mode = 2
theme = ExtResource("1_aonw2")
theme_override_font_sizes/font_size = 36
text = "30/30"
horizontal_alignment = 1

[node name="BackButton" type="Button" parent="."]
custom_minimum_size = Vector2(150, 0)
layout_mode = 0
offset_left = 30.0
offset_top = 30.0
offset_right = 180.0
offset_bottom = 81.0
size_flags_horizontal = 0
size_flags_vertical = 0
theme = ExtResource("1_aonw2")
theme_type_variation = &"PurpleButton"
theme_override_font_sizes/font_size = 32
text = "ย้อนกลับ"

[connection signal="choose_answer_result" from="ClockToDigitalChoiceQuestion" to="." method="_on_choose_answer_result"]
[connection signal="choose_answer_result" from="DigitalToClockChoiceQuestion" to="." method="_on_choose_answer_result"]
[connection signal="choose_answer_result" from="ClockToDigitalQuestion" to="." method="_on_choose_answer_result"]
[connection signal="choose_answer_result" from="DigitalToClockQuestion" to="." method="_on_choose_answer_result"]
[connection signal="pressed" from="BackButton" to="." method="_on_back_button_pressed"]
